# trevis

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
examples/: fib.py
trevis/: __init__.py
