[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trevis"
version = "0.0.1"
authors = [{ name = "João Cabral Pinto", email = "jmcabralpinto@gmail.com" }]
description = "trevis"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/cabralpinto/trevis/issues"
